test_scores/negative_dimers/features/P10515.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P10515.pkl.xz